--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
+    "@react-three/drei": "9.99.0",
+    "@react-three/fiber": "8.16.8",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@supabase/supabase-js": "^2.57.4",
+    "@types/three": "0.160.0",
+    "framer-motion": "^12.31.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "three": "0.160.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
